--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,10 +3,13 @@
   <head>
     <title>Error</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
     <h1>Error</h1>
     <p>Error: <span th:text="${error}"></span></p>
-    <a href="/">Go back</a>
+    <a href="/" class="btn btn-secondary mt-3">Go back</a>
   </body>
 </html>
