feat: toggling hue lamps on/off via frontend

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,8 +11,8 @@
 <body>
 
 <div class="jumbotron text-center">
-    <h1>Weather</h1>
-    <p>Weather information about your current location.</p>
+    <h1>Home</h1>
+    <p>Welcome, user!</p>
 </div>
 
 <div class="container">
