--- a/src/main/resources/templates/allPlants.html
+++ b/src/main/resources/templates/allPlants.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
+  <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('#plantsTable').DataTable();
+    });
+  </script>
   <style>
     .table-wrapper {
       display: block;
@@ -27,7 +34,7 @@
       </div>
       <div class="card-body">
         <div class="table-wrapper">
-          <table class="table table-striped">
+          <table id="plantsTable" class="table table-striped">
             <thead>
             <tr>
               <th>Name</th>
@@ -41,6 +48,7 @@
               <th>Last Fertilized</th>
               <th>Next Fertilizing</th>
               <th>Needs Water?</th>
+              <th>Water Button</th>
             </tr>
             </thead>
             <tbody>
