--- a/src/main/resources/templates/light.html
+++ b/src/main/resources/templates/light.html
@@ -7,6 +7,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
+  <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('#lightsTable').DataTable();
+    });
+  </script>
   <script>
     // Function to handle color change
     function handleColorChange(lightId, color) {
@@ -38,11 +45,13 @@
     </div>
     <div class="card-body">
       <div class="table-wrapper">
-        <table class="table table-striped">
+        <table id="lightsTable" class="table table-striped">
           <thead>
           <tr>
+            <th>ID</th>
             <th>Name</th>
             <th>State</th>
+            <th>Toggle</th>
             <th>Color</th>
           </tr>
           </thead>
