--- a/src/main/resources/templates/sightings.html
+++ b/src/main/resources/templates/sightings.html
@@ -8,6 +8,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
   <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
   <style>
     .table-wrapper {
       display: block;
@@ -20,12 +22,21 @@
       background-color: #f5f5f5;
     }
   </style>
+  <script>
+    $(document).ready(function(){
+      $('.datepicker').datepicker({
+        format: 'yyyy-mm-dd',
+        todayHighlight: true,
+        autoclose: true,
+      });
+    });
+  </script>
 </head>
   <body>
   <div class="container mt-4">
     <div class="card">
       <div class="card-header">
-        <h3 class="card-title">Available Plants</h3>
+        <h3 class="card-title">Plane Sightings</h3>
       </div>
       <div class="card-body">
         <div class="table-wrapper">
@@ -52,6 +63,23 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="container mt-4">
+    <form action="/planespotting/sightings/add" method="post">
+      <div class="form-group">
+        <label for="registrations">Enter Text:</label>
+        <input type="text" class="form-control" id="registrations" name="aircraftRegistrations">
+      </div>
+      <div class="form-group">
+        <label for="date">Enter Date:</label>
+        <input type="text" class="form-control datepicker" id="date" name="date">
+      </div>
+      <div class="form-group">
+        <label for="ICAO">Enter Text:</label>
+        <input type="text" class="form-control" id="ICAO" name="ICAO">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </div>
   <a href="/" class="btn btn-secondary mt-3">Go back</a>
   </body>
