--- a/src/main/resources/templates/sightings.html
+++ b/src/main/resources/templates/sightings.html
@@ -48,6 +48,7 @@
               <th>AC TYPE</th>
               <th>DEP</th>
               <th>ARR</th>
+              <th>SPOTTED AT</th>
             </tr>
             </thead>
             <tbody>
@@ -57,6 +58,7 @@
               <td th:text="${sighting.aircraftType}"></td>
               <td th:text="${sighting.departureICAO}"></td>
               <td th:text="${sighting.arrivalICAO}"></td>
+              <td th:text="${sighting.spottedAtICAO}"></td>
             </tr>
             </tbody>
           </table>
@@ -71,12 +73,12 @@
         <input type="text" class="form-control" id="registrations" name="aircraftRegistrations">
       </div>
       <div class="form-group">
-        <label for="date">Enter Date:</label>
-        <input type="text" class="form-control datepicker" id="date" name="date">
+        <label for="spottedAtICAO">Enter Text:</label>
+        <input type="text" class="form-control" id="spottedAtICAO" name="spottedAtICAO">
       </div>
       <div class="form-group">
-        <label for="ICAO">Enter Text:</label>
-        <input type="text" class="form-control" id="ICAO" name="ICAO">
+        <label for="date">Enter Date:</label>
+        <input type="text" class="form-control datepicker" id="date" name="date">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
