implemented automatic and manual update / download of the aircraft master data and parsing of the csv file to load it into the sql database.

--- a/src/main/resources/templates/sightings.html
+++ b/src/main/resources/templates/sightings.html
@@ -83,6 +83,7 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
+  <a href="/planespotting/aircraft-master-data/update" class="btn btn-secondary mt-3">Update Data</a>
   <a href="/" class="btn btn-secondary mt-3">Go back</a>
   </body>
 </html>
