implemented visualization of images connected to a sighting.

--- a/src/main/resources/templates/sightings.html
+++ b/src/main/resources/templates/sightings.html
@@ -50,6 +50,7 @@
               <th>ARR</th>
               <th>SPOTTED AT</th>
               <th>Actions</th>
+              <th>Images</th>
             </tr>
             </thead>
             <tbody>
@@ -67,6 +68,18 @@
                   <input type="file" name="file" accept="image/*" multiple>
                   <button type="submit" class="btn btn-primary">Upload</button>
                 </form>
+              </td>
+              <td>
+                <div id="imageLinksContainer">
+                  <a th:each="sightingImage : ${sightingImages}"
+                     th:if="${sightingImage.sighting.sightingId == sighting.sightingId}"
+                     th:href="@{'/planespotting/images/' + ${sightingImage.imagePath}}"
+                     target="_blank">
+                    <img th:src="@{'/planespotting/images/' + ${sightingImage.imagePath}}"
+                         alt="Image"
+                         style="max-width: 100px; max-height: 100px;" />
+                  </a>
+                </div>
               </td>
             </tr>
             </tbody>
