--- a/src/main/resources/templates/sightings.html
+++ b/src/main/resources/templates/sightings.html
@@ -74,10 +74,7 @@
                   <a th:each="sightingImage : ${sightingImages}"
                      th:if="${sightingImage.sighting.sightingId == sighting.sightingId}"
                      th:href="@{'/planespotting/images/' + ${sightingImage.imagePath}}"
-                     target="_blank">
-                    <img th:src="@{'/planespotting/images/' + ${sightingImage.imagePath}}"
-                         alt="Image"
-                         style="max-width: 100px; max-height: 100px;" />
+                     target="_blank">Image</a>
                   </a>
                 </div>
               </td>
