feature: basic statistics page; however long loading times need to be fixed in a future update.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,6 +41,11 @@
                     <button type="submit" class="btn btn-primary">Show Sightings</button>
                 </div>
             </form>
+            <form th:action="@{/planespotting/statistics}" method="get">
+                <div class="input-group mb-3">
+                    <button type="submit" class="btn btn-primary">Show Statistics</button>
+                </div>
+            </form>
         </div>
         <div class="col-sm-4">
             <h1>Plant Service</h1>
